# food-truck-tracker-django

./: .gitignore  README.md  db.sqlite3  dockerfile  gdal_installation.txt  manage.py  pyproject.toml
food_truck/: __init__.py  apps.py  models.py  startup_service.py  urls.py  views.py
food_truck/migrations/: 0001_initial.py
food_truck/static/css/: styles.css
food_truck/templates/food_truck/: food_truck_list.html
food_truck_tracker/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
